==================== 2.24.0.1 ====================

2008-09-15  Callum McKenzie  <callum@spooky-possum.org>

	* drive-button.c: Replace the calls to
	g_volume_get_activation_root since they don't appear to be working
	properly. The "Play DVD" button now comes up correctly.

2008-09-13  Callum McKenzie  <callum@spooky-possum.org>

	* drive-button.c (eject_finish): Avoid a crash on eject by
	supplying a callback. Bug 551669. This seems to be a work-around
	for a glib error.

2008-09-03  Callum McKenzie  <callum@spooky-possum.org>

	* drive-button.c:
	* drive-list.c:
	* drive-button.h:
	* drive-list.h:
	* drivemount.c: Port to GIO. Work done by Pierre Ossman. Bug
	#543711.

2007-10-13  Callum McKenzie  <callum@spooky-possum.org>

	* GNOME_DriveMountApplet.server.in.in: Patch from Alex Jones to
	stop the drivemount applet failing to load on the second
	log-in. (Bug #471889)

2007-08-22  Callum McKenzie  <callum@spooky-possum.org>

	* drive-button.c (drive_button_update): Moved declaration to be
	C89 compatible. Pointed out by Jens Granseuer (bug #461928).

2007-07-17  Jaap Haitsma <jaap@haitsma.org>

	* drive-button.c: (drive_button_init), (drive_button_new),
	(drive_button_new_from_volume), (drive_button_destroy),
	(drive_button_update):
	* drive-button.h:
	* drive-list.c: (drive_list_init), (drive_list_destroy),
	(add_drive), (add_volume):
	* drive-list.h:
	* drivemount.c: (display_about_dialog), (applet_factory):
	Use g_set_application name such that the application name
	gets shown correctly in the about dialog. Convert usage of GtkTooltips
	to new tooltips API of GTK 2.12 Fixes bug #457145

2007-02-25  Davyd Madeley  <davyd@madeley.id.au>

	* drive-button.c: Handle icon theme changes. Fixes #339006.
	  Based on a patch from Jesse Stockall  <jesse@cleverone.org>.

2006-11-16  Kjartan Maraas  <kmaraas@gnome.org>

	* drivemount.c: (applet_factory): Add an accessible name
	to the applet. Rodney Dawes, closes bug #373034.
